[package]
name = "nocostorm"
version = "1.0.0"
edition = "2021"
authors = ["Owlnext <contact@owlnext.fr>", "Adrien Gras <agr@owlnext.fr>"]
description = "Lightning fast, multi-threaded tool to push CSV data into NocoDB tables"
documentation = "https://github.com/owlnext-fr/nocostorm"
readme = "README.md"
repository = "https://github.com/owlnext-fr/nocostorm"
license-file = "LICENSE"
keywords = ["rust", "nocodb", "csv"]
publish = false

[dependencies]
clap = { version = "4.5.16", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
colored = "2.1.0"
csv = "1.3.0"
ctrlc = { version = "3.4.5", features = ["termination"] }
encoding_rs = "0.8.34"
encoding_rs_io = "0.1.7"
eyre = "0.6.12"
indicatif = {version = "0.17.8", features = ["rayon"]}
inquire = "0.7.5"
openssl = { version = "0.10", features = ["vendored"] }
rayon = "1.10.0"
reqwest = {version = "0.12.7", features = ["blocking", "json"]}
serde = "1.0.208"
serde_json = "1.0.125"
simple-log = "1.7.3"
stopwatch = "0.0.7"
url = "2.5.2"
uuid = {version = "1.10.0", features = ["v4"]}
